--- a/html/import.html
+++ b/html/import.html
@@ -19,6 +19,141 @@
 
     <body style="background-color: #ebeff7">
         <div class="container-fluid my-4">
+            <div class="row mb-2 mx-1">
+                <div class="progress px-0">
+                    <div
+                        id="progress"
+                        class="progress-bar"
+                        role="progressbar"
+                        style="width: 0%"
+                    >
+                        -
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="accordion" id="accordionExample">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button
+                                class="accordion-button"
+                                type="button"
+                                data-bs-toggle="collapse"
+                                data-bs-target="#collapseOne"
+                                aria-expanded="true"
+                                aria-controls="collapseOne"
+                            >
+                                1. load CSV data
+                            </button>
+                        </h2>
+                        <div
+                            id="collapseOne"
+                            class="accordion-collapse collapse show"
+                            data-bs-parent="#accordionExample"
+                        >
+                            <div class="accordion-body">
+                                <div class="list-group csvLoad" id="drop-area">
+                                    <file-drop accept="text/csv">
+                                        <label
+                                            for="csvTextarea"
+                                            class="form-label"
+                                            >csv input:</label
+                                        >
+                                    </file-drop>
+                                    <input
+                                        class="form-control form-control-sm"
+                                        type="file"
+                                        id="fileInput"
+                                        name="fileInput"
+                                        accept="text/csv"
+                                    />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button
+                                class="accordion-button collapsed"
+                                type="button"
+                                data-bs-toggle="collapse"
+                                data-bs-target="#collapseTwo"
+                                aria-expanded="false"
+                                aria-controls="collapseTwo"
+                            >
+                                2. select fields for embeddings
+                            </button>
+                        </h2>
+                        <div
+                            id="collapseTwo"
+                            class="accordion-collapse collapse"
+                            data-bs-parent="#accordionExample"
+                        >
+                            <div class="accordion-body">
+                                <span class="fs-6">select id field</span>
+                                <div id="idFields" class="mb-4"></div>
+                                <hr />
+
+                                <span class="fs-6"
+                                    >select embedding text fields</span
+                                >
+                                <div id="fields" class="mb-4"></div>
+                                <span>example text to embed:</span>
+                                <p id="exampleText" class="fw-light"></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button
+                                class="accordion-button collapsed"
+                                type="button"
+                                data-bs-toggle="collapse"
+                                data-bs-target="#collapseThree"
+                                aria-expanded="false"
+                                aria-controls="collapseThree"
+                            >
+                                3. start embedding process
+                            </button>
+                        </h2>
+                        <div
+                            id="collapseThree"
+                            class="accordion-collapse collapse"
+                            data-bs-parent="#accordionExample"
+                        >
+                            <div class="accordion-body">
+                                <button
+                                    type="button"
+                                    class="btn btn-primary"
+                                    id="generateEmbeddings"
+                                >
+                                    start embedding
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="input-group my-3">
+                    <input
+                        type="text"
+                        class="form-control"
+                        placeholder="query text"
+                        aria-label="query text"
+                        aria-describedby="search"
+                        id="query"
+                    />
+                    <button
+                        class="btn btn-primary"
+                        type="button"
+                        id="search"
+                        disabled
+                    >
+                        search
+                    </button>
+                </div>
+            </div>
             <div class="row mx-2" style="background-color: white">
                 <table
                     id="stream-table"
@@ -35,5 +170,7 @@
         <script src="/js/bootstrap-table.min.v1.22.4.js"></script>
         <script src="/js/tableExport.min.v1.27.0.js"></script>
         <script src="/js/bootstrap-table-export.min.v1.22.4.js"></script>
+
+        <script src="/js/import.js"></script>
     </body>
 </html>
