--- a/html/import.html
+++ b/html/import.html
@@ -19,11 +19,24 @@
 
     <body style="background-color: #ebeff7">
         <div class="container-fluid my-4">
+            <div
+                id="warning"
+                class="alert alert-warning alert-dismissible fade show d-none mb-1 shadow"
+                role="alert"
+            >
+                <span id="warning-text">warning</span>
+                <button
+                    type="button"
+                    class="btn-close"
+                    data-bs-dismiss="alert"
+                    aria-label="Close"
+                ></button>
+            </div>
             <div class="row mb-2 mx-1">
-                <div class="progress px-0">
+                <div class="progress px-0 shadow-sm">
                     <div
                         id="progress"
-                        class="progress-bar"
+                        class="progress-bar progress-bar-striped progress-bar-animated"
                         role="progressbar"
                         style="width: 0%"
                     >
@@ -43,7 +56,7 @@
                                 aria-expanded="true"
                                 aria-controls="collapseOne"
                             >
-                                1. load CSV data
+                                1. load data
                             </button>
                         </h2>
                         <div
@@ -52,22 +65,24 @@
                             data-bs-parent="#accordionExample"
                         >
                             <div class="accordion-body">
-                                <div class="list-group csvLoad" id="drop-area">
-                                    <file-drop accept="text/csv">
+                                <file-drop accept="text/csv">
+                                    <div
+                                        class="input-group csvLoad"
+                                        id="drop-area"
+                                    >
                                         <label
                                             for="csvTextarea"
-                                            class="form-label"
-                                            >csv input:</label
+                                            class="input-group-text"
+                                            >import .csv</label
                                         >
-                                    </file-drop>
-                                    <input
-                                        class="form-control form-control-sm"
-                                        type="file"
-                                        id="fileInput"
-                                        name="fileInput"
-                                        accept="text/csv"
-                                    />
-                                </div>
+                                        <input
+                                            class="form-control"
+                                            type="file"
+                                            id="fileInput"
+                                            name="fileInput"
+                                            accept="text/csv"
+                                        /></div
+                                ></file-drop>
                             </div>
                         </div>
                     </div>
@@ -90,16 +105,35 @@
                             data-bs-parent="#accordionExample"
                         >
                             <div class="accordion-body">
-                                <span class="fs-6">select id field</span>
-                                <div id="idFields" class="mb-4"></div>
-                                <hr />
+                                <div class="card mb-2">
+                                    <div class="card-body">
+                                        <span class="fs-6"
+                                            >select id field</span
+                                        >
+                                        <div id="idFields" class=""></div>
+                                    </div>
+                                </div>
 
-                                <span class="fs-6"
-                                    >select embedding text fields</span
-                                >
-                                <div id="fields" class="mb-4"></div>
-                                <span>example text to embed:</span>
-                                <p id="exampleText" class="fw-light"></p>
+                                <div class="card">
+                                    <div class="card-body pb-1">
+                                        <span class="fs-6"
+                                            >select embedding text fields</span
+                                        >
+                                        <div id="fields" class=""></div>
+                                    </div>
+                                    <div class="card-body pt-0 pb-2">
+                                        <span>example text to embed: </span>
+                                        <span
+                                            id="exampleText"
+                                            class="fw-light"
+                                        ></span>
+                                        <span
+                                            id="numberOfTokens"
+                                            class="font-monospace"
+                                        ></span>
+                                        <span>tokens</span>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -122,43 +156,77 @@
                             data-bs-parent="#accordionExample"
                         >
                             <div class="accordion-body">
-                                <button
-                                    type="button"
-                                    class="btn btn-primary"
-                                    id="generateEmbeddings"
-                                >
-                                    start embedding
-                                </button>
+                                <div class="input-group">
+                                    <label
+                                        for="saveTableInput"
+                                        class="input-group-text"
+                                        >table name</label
+                                    >
+                                    <input
+                                        type="text"
+                                        class="form-control"
+                                        placeholder="e.g. all"
+                                        id="saveTableInput"
+                                        list="saveTableList"
+                                        autocomplete="off"
+                                        required
+                                    />
+                                    <button
+                                        type="button"
+                                        class="btn btn-primary"
+                                        id="generateEmbeddings"
+                                    >
+                                        start embedding
+                                    </button>
+                                    <datalist id="saveTableList"> </datalist>
+                                </div>
                             </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button
+                                class="accordion-button collapsed"
+                                type="button"
+                                data-bs-toggle="collapse"
+                                data-bs-target="#collapseFour"
+                                aria-expanded="false"
+                                aria-controls="collapseFour"
+                            >
+                                4. -
+                            </button>
+                        </h2>
+                        <div
+                            id="collapseFour"
+                            class="accordion-collapse collapse"
+                            data-bs-parent="#accordionExample"
+                        >
+                            <div class="accordion-body"></div>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="input-group my-3">
+                    <label for="query" class="input-group-text"
+                        >find related text</label
+                    >
                     <input
                         type="text"
                         class="form-control"
                         placeholder="query text"
-                        aria-label="query text"
-                        aria-describedby="search"
                         id="query"
                     />
-                    <button
-                        class="btn btn-primary"
-                        type="button"
-                        id="search"
-                        disabled
-                    >
+                    <div class="col-2">
+                        <select class="form-select" id="tableSelect"></select>
+                    </div>
+                    <button class="btn btn-primary" type="button" id="search">
                         search
                     </button>
                 </div>
             </div>
-            <div class="row mx-2" style="background-color: white">
-                <table
-                    id="stream-table"
-                    style="--bs-table-bg: transparent !important"
-                ></table>
+            <div class="row mx-1 bg-body">
+                <table id="dataTable"></table>
             </div>
         </div>
 
