--- a/html/import.html
+++ b/html/import.html
@@ -7,7 +7,7 @@
             content="width=device-width, initial-scale=1, user-scalable=0"
         />
 
-        <title>import | simcheck</title>
+        <title>simcheck</title>
 
         <link rel="stylesheet" href="/css/bootstrap.v5.3.min.css" />
         <link
@@ -32,182 +32,125 @@
                     aria-label="Close"
                 ></button>
             </div>
-            <div class="row mb-2 mx-1">
-                <div class="progress px-0 shadow-sm">
-                    <div
-                        id="progress"
-                        class="progress-bar progress-bar-striped progress-bar-animated"
-                        role="progressbar"
-                        style="width: 0%"
-                    >
-                        -
+            <div class="card mb-1">
+                <div class="card-body">
+                    <div class="progress px-0 shadow-sm">
+                        <div
+                            id="progress"
+                            class="progress-bar progress-bar-striped progress-bar-animated"
+                            role="progressbar"
+                            style="width: 0%"
+                        >
+                            -
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="accordion" id="accordionExample">
-                    <div class="accordion-item">
-                        <h2 class="accordion-header">
-                            <button
-                                class="accordion-button"
-                                type="button"
-                                data-bs-toggle="collapse"
-                                data-bs-target="#collapseOne"
-                                aria-expanded="true"
-                                aria-controls="collapseOne"
-                            >
-                                1. load data
-                            </button>
-                        </h2>
-                        <div
-                            id="collapseOne"
-                            class="accordion-collapse collapse show"
-                            data-bs-parent="#accordionExample"
-                        >
-                            <div class="accordion-body">
-                                <file-drop accept="text/csv">
-                                    <div
-                                        class="input-group csvLoad"
-                                        id="drop-area"
-                                    >
-                                        <label
-                                            for="csvTextarea"
-                                            class="input-group-text"
-                                            >import .csv</label
-                                        >
-                                        <input
-                                            class="form-control"
-                                            type="file"
-                                            id="fileInput"
-                                            name="fileInput"
-                                            accept="text/csv"
-                                        /></div
-                                ></file-drop>
-                            </div>
-                        </div>
+            <div class="card">
+                <div class="card-header bg-primary-subtle">prepare data</div>
+                <div class="card-body">
+                    <div class="row pb-3">
+                        <span class="fw-5">import .csv</span>
+                        <file-drop accept="text/csv">
+                            <div class="input-group csvLoad" id="drop-area">
+                                <input
+                                    class="form-control"
+                                    type="file"
+                                    id="fileInput"
+                                    name="fileInput"
+                                    accept="text/csv"
+                                /></div
+                        ></file-drop>
                     </div>
-                    <div class="accordion-item">
-                        <h2 class="accordion-header">
-                            <button
-                                class="accordion-button collapsed"
-                                type="button"
-                                data-bs-toggle="collapse"
-                                data-bs-target="#collapseTwo"
-                                aria-expanded="false"
-                                aria-controls="collapseTwo"
-                            >
-                                2. select fields for embeddings
-                            </button>
-                        </h2>
-                        <div
-                            id="collapseTwo"
-                            class="accordion-collapse collapse"
-                            data-bs-parent="#accordionExample"
-                        >
-                            <div class="accordion-body">
-                                <div class="card mb-2">
-                                    <div class="card-body">
-                                        <span class="fs-6"
-                                            >select id field</span
-                                        >
-                                        <div id="idFields" class=""></div>
-                                    </div>
-                                </div>
 
-                                <div class="card">
-                                    <div class="card-body pb-1">
-                                        <span class="fs-6"
-                                            >select embedding text fields</span
-                                        >
-                                        <div id="fields" class=""></div>
-                                    </div>
-                                    <div class="card-body pt-0 pb-2">
-                                        <span>example text to embed: </span>
-                                        <span
-                                            id="exampleText"
-                                            class="fw-light"
-                                        ></span>
-                                        <span
-                                            id="numberOfTokens"
-                                            class="font-monospace"
-                                        ></span>
-                                        <span>tokens</span>
-                                    </div>
-                                </div>
+                    <div class="row pb-3">
+                        <span class="fw-5">object storage settings</span>
+                        <div class="pb-2">
+                            <div class="input-group">
+                                <label
+                                    for="saveTableInput"
+                                    class="input-group-text"
+                                    >object store name</label
+                                >
+                                <input
+                                    type="text"
+                                    class="form-control"
+                                    placeholder="e.g. all"
+                                    id="saveTableInput"
+                                    list="saveTableList"
+                                    autocomplete="off"
+                                    required
+                                />
+
+                                <datalist id="saveTableList"> </datalist>
+                            </div>
+                        </div>
+                        <div class="pb-2">
+                            <div class="input-group">
+                                <label for="idFields" class="input-group-text"
+                                    >id field</label
+                                >
+                                <select
+                                    id="idFields"
+                                    class="form-select"
+                                ></select>
+                            </div>
+                        </div>
+                        <div class="">
+                            <div class="input-group">
+                                <label
+                                    for="embeddingsFields"
+                                    class="input-group-text"
+                                    >embedding text fields</label
+                                >
+                                <select
+                                    id="embeddingsFields"
+                                    class="form-select"
+                                ></select>
+                                <button
+                                    type="button"
+                                    class="btn btn-outline-primary"
+                                    id="addEmbeddingField"
+                                >
+                                    add
+                                </button>
+                            </div>
+                            <ul id="selectedFields" class="list-group"></ul>
+                            <ul
+                                id="trashFields"
+                                class="list-group bg-danger-subtle d-flex justify-content-center align-items-center"
+                            >
+                                <i class="bi bi-trash fs-4"></i>
+                            </ul>
+                        </div>
+                        <div class="pb-2">
+                            <div class="form-floating">
+                                <textarea
+                                    disabled
+                                    class="form-control fw-light h-auto d-inline-block"
+                                    placeholder="example text to get embedded"
+                                    id="exampleText"
+                                ></textarea>
+                                <label for="exampleText" id="numberOfTokens"
+                                    >example text to get embedded</label
+                                >
                             </div>
                         </div>
                     </div>
-                    <div class="accordion-item">
-                        <h2 class="accordion-header">
-                            <button
-                                class="accordion-button collapsed"
-                                type="button"
-                                data-bs-toggle="collapse"
-                                data-bs-target="#collapseThree"
-                                aria-expanded="false"
-                                aria-controls="collapseThree"
-                            >
-                                3. start embedding process
-                            </button>
-                        </h2>
-                        <div
-                            id="collapseThree"
-                            class="accordion-collapse collapse"
-                            data-bs-parent="#accordionExample"
+                    <div class="d-grid gap-2">
+                        <button
+                            type="button"
+                            class="btn btn-primary"
+                            id="generateEmbeddings"
                         >
-                            <div class="accordion-body">
-                                <div class="input-group">
-                                    <label
-                                        for="saveTableInput"
-                                        class="input-group-text"
-                                        >table name</label
-                                    >
-                                    <input
-                                        type="text"
-                                        class="form-control"
-                                        placeholder="e.g. all"
-                                        id="saveTableInput"
-                                        list="saveTableList"
-                                        autocomplete="off"
-                                        required
-                                    />
-                                    <button
-                                        type="button"
-                                        class="btn btn-primary"
-                                        id="generateEmbeddings"
-                                    >
-                                        start embedding
-                                    </button>
-                                    <datalist id="saveTableList"> </datalist>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="accordion-item">
-                        <h2 class="accordion-header">
-                            <button
-                                class="accordion-button collapsed"
-                                type="button"
-                                data-bs-toggle="collapse"
-                                data-bs-target="#collapseFour"
-                                aria-expanded="false"
-                                aria-controls="collapseFour"
-                            >
-                                4. -
-                            </button>
-                        </h2>
-                        <div
-                            id="collapseFour"
-                            class="accordion-collapse collapse"
-                            data-bs-parent="#accordionExample"
-                        >
-                            <div class="accordion-body"></div>
-                        </div>
+                            start embedding
+                        </button>
                     </div>
                 </div>
             </div>
+
             <div class="row">
-                <div class="input-group my-3">
+                <div class="input-group mt-3">
                     <label for="query" class="input-group-text"
                         >find related text</label
                     >
@@ -225,6 +168,22 @@
                     </button>
                 </div>
             </div>
+            <div class="row">
+                <div class="input-group mt-1 mb-3">
+                    <label for="query" class="input-group-text"
+                        >compare tables</label
+                    >
+                    <div class="col">
+                        <select class="form-select" id="compareTable1"></select>
+                    </div>
+                    <div class="col">
+                        <select class="form-select" id="compareTable2"></select>
+                    </div>
+                    <button class="btn btn-primary" type="button" id="compare">
+                        compare
+                    </button>
+                </div>
+            </div>
             <div class="row mx-1 bg-body">
                 <table id="dataTable"></table>
             </div>
@@ -239,6 +198,7 @@
         <script src="/js/tableExport.min.v1.27.0.js"></script>
         <script src="/js/bootstrap-table-export.min.v1.22.4.js"></script>
 
+        <script src="/js/Sortable.min.v1.15.2.js"></script>
         <script src="/js/import.js"></script>
     </body>
 </html>
