--- a/html/options.html
+++ b/html/options.html
@@ -37,19 +37,23 @@
             </div>
             <div class="row mb-2">
                 <h3>cached models</h3>
-                <table class="table table-striped table-hover mx-2">
+                <table
+                    id="modelsTable"
+                    class="table table-striped table-hover mx-2"
+                >
                     <thead>
                         <tr>
                             <th scope="col">model</th>
                             <th scope="col">quantized</th>
                             <th scope="col" class="text-end">size</th>
-                            <th scope="col"></th>
+                            <th scope="col" class="text-center">select</th>
+                            <th scope="col" class="text-center">delete</th>
                         </tr>
                     </thead>
                     <tbody id="models"></tbody>
                 </table>
             </div>
-            <div class="row mb-2">
+            <div class="row pb-2 border-bottom">
                 <label for="model-name" class="form-label"
                     >add model name</label
                 >
@@ -81,9 +85,54 @@
                     >
                 </div>
             </div>
+            <div class="row mt-2 pb-2 border-bottom">
+                <h3>OpenAI settings</h3>
+                <label for="model-name" class="form-label"
+                    >add openAI API key</label
+                >
+                <div class="input-group">
+                    <input
+                        type="text"
+                        class="form-control"
+                        id="openaiKey"
+                        placeholder="sk-…"
+                    />
+                    <button
+                        class="btn btn-outline-primary"
+                        type="button"
+                        id="openaiKeyBtn"
+                    >
+                        save
+                    </button>
+                </div>
+                <div class="form-text" id="model-name-helptext">
+                    You can get the api key at
+                    <a
+                        href="https://platform.openai.com/settings/profile?tab=api-keys"
+                        target="_blank"
+                        >OpenAI playground settings</a
+                    >
+                </div>
+            </div>
+            <div class="row mt-2 mb-2">
+                <h3>object stores</h3>
+                <table
+                    id="objectStoresTable"
+                    class="table table-striped table-hover mx-2"
+                >
+                    <thead>
+                        <tr>
+                            <th scope="col">name</th>
+                            <th scope="col" class="text-end">rows</th>
+                            <th scope="col" class="text-end">delete</th>
+                        </tr>
+                    </thead>
+                    <tbody id="objectStores"></tbody>
+                </table>
+            </div>
         </div>
 
-        <div id="deleteQuestion" class="modal" tabindex="-1">
+        <div id="deleteModelQuestion" class="modal" tabindex="-1">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -100,7 +149,42 @@
                     </div>
                     <div class="modal-footer">
                         <button
-                            id="reallyDelete"
+                            id="reallyDeleteModel"
+                            type="button"
+                            class="btn btn-outline-danger"
+                        >
+                            delete
+                        </button>
+                        <button
+                            type="button"
+                            class="btn btn-secondary"
+                            data-bs-dismiss="modal"
+                        >
+                            cancel
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="deleteObjectStoreQuestion" class="modal" tabindex="-1">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">confirm deletion of</h5>
+                        <button
+                            type="button"
+                            class="btn-close"
+                            data-bs-dismiss="modal"
+                            aria-label="Close"
+                        ></button>
+                    </div>
+                    <div class="modal-body">
+                        <span id="objectStoreNameForDeletetion">-</span>
+                    </div>
+                    <div class="modal-footer">
+                        <button
+                            id="reallyDeleteObjectStore"
                             type="button"
                             class="btn btn-outline-danger"
                         >
