--- a/html/cluster.html
+++ b/html/cluster.html
@@ -19,7 +19,70 @@
     </head>
 
     <body style="background-color: #ebeff7">
-        <div class="container-fluid my-4">
+        <nav
+            class="navbar navbar-expand-lg bg-dark border-bottom border-body"
+            data-bs-theme="dark"
+        >
+            <div class="container-fluid">
+                <span class="navbar-brand" href="#">
+                    <img
+                        src="/icons/clusters.svg"
+                        alt="simcheck"
+                        width="24"
+                        height="24"
+                    />
+                </span>
+
+                <div class="collapse navbar-collapse" id="navbarColor01">
+                    <ul class="navbar-nav me-4 mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" href="/html/import.html"
+                                >Import</a
+                            >
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="/html/cluster.html"
+                                >Cluster</a
+                            >
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/html/map.html">Map</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/html/options.html"
+                                >Options</a
+                            >
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Help</a>
+                        </li>
+                    </ul>
+                    <div class="input-group d-flex">
+                        <input
+                            type="text"
+                            class="form-control"
+                            placeholder="search related content"
+                            id="query"
+                            autocomplete="off"
+                        />
+                        <div class="col-2">
+                            <select
+                                class="form-select"
+                                id="tableSelect"
+                            ></select>
+                        </div>
+                        <button
+                            class="btn btn-primary"
+                            type="button"
+                            id="search"
+                        >
+                            search
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </nav>
+        <div class="container-fluid mt-1 mb-4">
             <div class="card mb-1">
                 <div class="card-body">
                     <div class="progress px-0 shadow-sm">
@@ -40,7 +103,70 @@
                     cluster settings
                 </div>
                 <div class="card-body">
-                    <div class="row pb-2">
+                    <div class="pb-2">
+                        <div class="form-check">
+                            <input
+                                class="form-check-input"
+                                type="checkbox"
+                                value=""
+                                id="hclustCheckEnabled"
+                                checked=""
+                            />
+                            <label
+                                class="form-check-label"
+                                for="flexCheckChecked"
+                                >agglomerative hierarchical clustering (slower
+                                but likely more precise)</label
+                            >
+                        </div>
+                    </div>
+                    <div class="py-2 border-top border-black">
+                        <div class="input-group">
+                            <label for="nNeighbors" class="input-group-text"
+                                >umap neighbors:
+                                <span id="nNeighborsValue">15</span></label
+                            >
+                            <input
+                                type="range"
+                                class="form-range form-control h-auto d-inline-block"
+                                id="nNeighbors"
+                                min="2"
+                                max="100"
+                                value="15"
+                            />
+                        </div>
+                        <div class="input-group">
+                            <label for="spread" class="input-group-text"
+                                >umap spread:
+                                <span id="spreadValue">1.0</span></label
+                            >
+                            <input
+                                type="range"
+                                class="form-range form-control h-auto d-inline-block"
+                                id="spread"
+                                min="0.5"
+                                max="2.0"
+                                value="1.0"
+                                step="0.1"
+                            />
+                        </div>
+                        <div class="input-group">
+                            <label for="minDist" class="input-group-text"
+                                >umap minDist:
+                                <span id="minDistValue">0.1</span></label
+                            >
+                            <input
+                                type="range"
+                                class="form-range form-control h-auto d-inline-block"
+                                id="minDist"
+                                min="0.1"
+                                max="0.9"
+                                value="0.1"
+                                step="0.1"
+                            />
+                        </div>
+                    </div>
+                    <div class="py-2 border-top border-black">
                         <div class="mb-2">
                             <div class="input-group">
                                 <select
