mainly map improvements

--- a/html/map.html
+++ b/html/map.html
@@ -87,6 +87,23 @@
                         (re)generate map
                     </button>
                 </div>
+                <div class="input-group mb-2">
+                    <div class="form-floating">
+                        <select id="titleSelect" class="form-select"></select>
+                        <label for="titleSelect">select label title</label>
+                    </div>
+                </div>
+                <div class="input-group mb-2">
+                    <div class="form-floating">
+                        <select
+                            id="descriptionSelect"
+                            class="form-select"
+                        ></select>
+                        <label for="descriptionSelect"
+                            >select description</label
+                        >
+                    </div>
+                </div>
 
                 <div class="d-grid mb-2">
                     <button
@@ -130,7 +147,7 @@
                         title="Choose your color"
                     />
                     <button
-                        class="btn btn-outline-secondary"
+                        class="btn btn-outline-success"
                         type="button"
                         id="urlRegexBtn"
                     >
