table and settings exports

--- a/html/cluster.html
+++ b/html/cluster.html
@@ -195,15 +195,15 @@
             </div>
         </div>
 
-        <script src="/js/jquery.min.v3.7.1.js"></script>
-        <script src="/js/bootstrap.bundle.v5.3.min.js"></script>
+        <script src="/libs/jquery.min.v3.7.1.js"></script>
+        <script src="/libs/bootstrap.bundle.v5.3.min.js"></script>
 
-        <script src="/js/bootstrap-table.min.v1.22.4.js"></script>
-        <script src="/js/tableExport.min.v1.27.0.js"></script>
-        <script src="/js/bootstrap-table-export.min.v1.22.4.js"></script>
+        <script src="/libs/bootstrap-table.min.v1.22.4.js"></script>
+        <script src="/libs/tableExport.min.v1.27.0.js"></script>
+        <script src="/libs/bootstrap-table-export.min.v1.22.4.js"></script>
 
-        <script src="/js/Sortable.min.v1.15.2.js"></script>
-        <script src="/js/select2.min.v4.0.13.js"></script>
+        <script src="/libs/Sortable.min.v1.15.2.js"></script>
+        <script src="/libs/select2.min.v4.0.13.js"></script>
 
         <script type="module" src="/js/cluster.js"></script>
     </body>
