--- a/html/options.html
+++ b/html/options.html
@@ -275,8 +275,8 @@
             </div>
         </div>
 
-        <script src="/js/jquery.min.v3.7.1.js"></script>
-        <script src="/js/bootstrap.bundle.v5.3.min.js"></script>
+        <script src="/libs/jquery.min.v3.7.1.js"></script>
+        <script src="/libs/bootstrap.bundle.v5.3.min.js"></script>
 
         <script src="/js/options.js" type="module"></script>
     </body>
