--- a/html/map.html
+++ b/html/map.html
@@ -36,7 +36,6 @@
             >
                 <i class="bi bi-sliders"></i>
             </button>
-
         </div>
 
         <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasMenu">
@@ -220,14 +219,14 @@
             </div>
         </div>
 
-        <script src="/js/jquery.min.v3.7.1.js"></script>
-        <script src="/js/bootstrap.bundle.v5.3.min.js"></script>
+        <script src="/libs/jquery.min.v3.7.1.js"></script>
+        <script src="/libs/bootstrap.bundle.v5.3.min.js"></script>
 
-        <script src="/js/handlebars.runtime.min.v4.7.8.js"></script>
+        <script src="/libs/handlebars.runtime.min.v4.7.8.js"></script>
         <script src="/templates/accordionItem.precompiled.js"></script>
         <script src="/templates/coloring.precompiled.js"></script>
 
-        <script src="/js/dbscan.js"></script>
+        <script src="/libs/dbscan.js"></script>
 
         <script type="module" src="/js/map.js"></script>
     </body>
