--- a/html/cluster.html
+++ b/html/cluster.html
@@ -88,7 +88,7 @@
                     <div class="progress px-0 shadow-sm">
                         <div
                             id="progress"
-                            class="progress-bar progress-bar-striped progress-bar-animated"
+                            class="progress-bar overflow-visible"
                             role="progressbar"
                             style="width: 0%"
                         >
@@ -114,7 +114,7 @@
                             />
                             <label
                                 class="form-check-label"
-                                for="flexCheckChecked"
+                                for="hclustCheckEnabled"
                                 >agglomerative hierarchical clustering (slower
                                 but likely more precise)</label
                             >
