--- a/html/import.html
+++ b/html/import.html
@@ -192,6 +192,22 @@
                             </div>
                         </div>
                     </div>
+                    <div class="py-2">
+                        <div class="form-check">
+                            <input
+                                class="form-check-input"
+                                type="checkbox"
+                                value=""
+                                id="keepEmbeddings"
+                                checked=""
+                            />
+                            <label
+                                class="form-check-labe w-100"
+                                for="keepEmbeddings"
+                                >keep existing embeddings</label
+                            >
+                        </div>
+                    </div>
                     <div class="d-grid gap-2">
                         <button
                             type="button"
