estimate time for clustering and notification for embedding finished

--- a/html/cluster.html
+++ b/html/cluster.html
@@ -54,31 +54,13 @@
                             >
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Help</a>
+                            <a
+                                class="nav-link"
+                                href="https://docs.google.com/document/d/1wnIekRglMEkagw6dsucxNRkHclpQE_ptwkIyXzNvQ1s/"
+                                >Help</a
+                            >
                         </li>
                     </ul>
-                    <div class="input-group d-flex">
-                        <input
-                            type="text"
-                            class="form-control"
-                            placeholder="search related content"
-                            id="query"
-                            autocomplete="off"
-                        />
-                        <div class="col-2">
-                            <select
-                                class="form-select"
-                                id="tableSelect"
-                            ></select>
-                        </div>
-                        <button
-                            class="btn btn-primary"
-                            type="button"
-                            id="search"
-                        >
-                            search
-                        </button>
-                    </div>
                 </div>
             </div>
         </nav>
@@ -190,7 +172,7 @@
                 </div>
             </div>
 
-            <div class="row mx-1 bg-body">
+            <div class="row mx-1 my-2 pb-2 bg-body">
                 <table id="dataTable"></table>
             </div>
         </div>
