--- a/html/import.html
+++ b/html/import.html
@@ -54,7 +54,11 @@
                             >
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Help</a>
+                            <a
+                                class="nav-link"
+                                href="https://docs.google.com/document/d/1wnIekRglMEkagw6dsucxNRkHclpQE_ptwkIyXzNvQ1s/"
+                                >Help</a
+                            >
                         </li>
                     </ul>
                     <div class="input-group d-flex">
@@ -162,6 +166,7 @@
                         </div>
 
                         <div class="mt-2">
+                            <!--
                             <div class="input-group">
                                 <input
                                     type="text"
@@ -170,6 +175,7 @@
                                     id="textPrefix"
                                 />
                             </div>
+                            -->
                             <div class="form-floating">
                                 <textarea
                                     disabled
@@ -221,7 +227,7 @@
             </div>
 
             <div class="row">
-                <div class="input-group mt-1 mb-3">
+                <div class="input-group my-2">
                     <label for="query" class="input-group-text"
                         >compare tables</label
                     >
@@ -236,7 +242,7 @@
                     </button>
                 </div>
             </div>
-            <div class="row mx-1 bg-body">
+            <div class="row mx-1 pb-2 bg-body">
                 <table id="dataTable"></table>
             </div>
         </div>
