--- a/html/map.html
+++ b/html/map.html
@@ -67,7 +67,11 @@
                         >
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Help</a>
+                        <a
+                            class="nav-link"
+                            href="https://docs.google.com/document/d/1wnIekRglMEkagw6dsucxNRkHclpQE_ptwkIyXzNvQ1s/"
+                            >Help</a
+                        >
                     </li>
                 </ul>
                 <div class="d-grid mb-2">
@@ -203,7 +207,7 @@
                         ></button>
                     </div>
                     <div class="modal-body">
-                      <table id="dataTable"></table>
+                        <table id="dataTable"></table>
                     </div>
                     <div class="modal-footer">
                         <button
