--- a/html/options.html
+++ b/html/options.html
@@ -53,31 +53,13 @@
                             >
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Help</a>
+                            <a
+                                class="nav-link"
+                                href="https://docs.google.com/document/d/1wnIekRglMEkagw6dsucxNRkHclpQE_ptwkIyXzNvQ1s/"
+                                >Help</a
+                            >
                         </li>
                     </ul>
-                    <div class="input-group d-flex">
-                        <input
-                            type="text"
-                            class="form-control"
-                            placeholder="search related content"
-                            id="query"
-                            autocomplete="off"
-                        />
-                        <div class="col-2">
-                            <select
-                                class="form-select"
-                                id="tableSelect"
-                            ></select>
-                        </div>
-                        <button
-                            class="btn btn-primary"
-                            type="button"
-                            id="search"
-                        >
-                            search
-                        </button>
-                    </div>
                 </div>
             </div>
         </nav>
@@ -202,6 +184,23 @@
                     </thead>
                     <tbody id="objectStores"></tbody>
                 </table>
+            </div>
+            <div class="mb-2">
+                <div class="form-check form-switch">
+                    <input
+                        class="form-check-input"
+                        type="checkbox"
+                        role="switch"
+                        id="permissionCheckDisabled"
+                        disabled
+                    />
+                    <label
+                        class="form-check-label"
+                        for="permissionCheckDisabled"
+                        >Notification permission:
+                        <span id="permissionText"></span
+                    ></label>
+                </div>
             </div>
         </div>
 
