--- a/html/import.html
+++ b/html/import.html
@@ -88,17 +88,38 @@
         </nav>
         <div class="container-fluid mt-1 mb-4">
             <div
-                id="warning"
-                class="alert alert-warning alert-dismissible fade show d-none mb-1 shadow"
-                role="alert"
+                aria-live="polite"
+                aria-atomic="true"
+                class="bg-body-secondary position-relative"
             >
-                <span id="warning-text">warning</span>
-                <button
-                    type="button"
-                    class="btn-close"
-                    data-bs-dismiss="alert"
-                    aria-label="Close"
-                ></button>
+                <div
+                    class="toast-container p-3 top-0 start-50 translate-middle-x"
+                >
+                    <div
+                        id="warningToast"
+                        class="toast"
+                        role="alert"
+                        aria-live="assertive"
+                        aria-atomic="true"
+                    >
+                        <div class="toast-header bg-danger-subtle">
+                            <img
+                                src="/icons/clusters.svg"
+                                class="rounded me-2"
+                            />
+                            <strong class="me-auto">Warning</strong>
+                            <button
+                                type="button"
+                                class="btn-close"
+                                data-bs-dismiss="toast"
+                                aria-label="Close"
+                            ></button>
+                        </div>
+                        <div class="toast-body" id="warning-text">
+                            something went wrong
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="card mb-1">
                 <div class="card-body">
@@ -221,6 +242,15 @@
                             id="generateEmbeddings"
                         >
                             start embedding
+                        </button>
+                    </div>
+                    <div class="d-grid gap-2">
+                        <button
+                            type="button"
+                            class="btn btn-primary"
+                            id="generateHNSW"
+                        >
+                            generate HNSW for quicker searches
                         </button>
                     </div>
                 </div>
