--- a/html/import.html
+++ b/html/import.html
@@ -243,14 +243,12 @@
                         >
                             start embedding
                         </button>
-                    </div>
-                    <div class="d-grid gap-2">
                         <button
                             type="button"
                             class="btn btn-primary"
                             id="generateHNSW"
                         >
-                            generate HNSW for quicker searches
+                            (re)generate HNSW for quicker searches
                         </button>
                     </div>
                 </div>
@@ -288,6 +286,7 @@
 
         <script src="/libs/Sortable.min.v1.15.2.js"></script>
         <script src="/libs/select2.min.v4.0.13.js"></script>
+        <script src="/libs/fft.js"></script>
         <script src="/js/import.js" type="module"></script>
     </body>
 </html>
