first deploy ready?

--- a/html/import.html
+++ b/html/import.html
@@ -248,7 +248,7 @@
                             class="btn btn-primary"
                             id="generateHNSW"
                         >
-                            (re)generate HNSW for quicker searches
+                            (re)generate HNSW for faster compare
                         </button>
                     </div>
                 </div>
@@ -257,7 +257,7 @@
             <div class="row">
                 <div class="input-group my-2">
                     <label for="query" class="input-group-text"
-                        >compare tables</label
+                        >compare object stores</label
                     >
                     <div class="col">
                         <select class="form-select" id="compareTable1"></select>
